terraform/main.tf
resource "aws_lb" "tiffany_multistack" {
  name               = "tiffany-main-app-lb"
  internal           = false
  load_balancer_type = "application"
  subnets            = [aws_subnet.tiffany_public_subnet_1.id, aws_subnet.tiffany_public_subnet_2.id]
#  security_groups    = [module.lb_security_group.this_security_group_id]
}

resource "aws_lb_listener" "tiffany_multistack" {
  load_balancer_arn = aws_lb.tiffany_multistack.arn
  port              = "80"
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.tiffany_multistack.arn
  }
}

resource "aws_lb_target_group" "tiffany_multistack" {
  name     = "tiffany-lb-target-group"
  port     = 80
  protocol = "HTTP"
  vpc_id   = aws_vpc.tiffany_vpc.id

  health_check {
    port     = 80
    protocol = "HTTP"
    timeout  = 5
    interval = 10
  }
}

resource "aws_instance" "tiffany_server_1" {
  ami           = "ami-0025245f3ca0bcc82"
  instance_type = "t3.micro"
  subnet_id     = aws_subnet.tiffany_public_subnet_1.id
  vpc_security_group_ids = [aws_security_group.tiffany_public_SG.id]
  key_name = "po-lin-day20-lab-key-pair"

#  provisioner "remote-exec" {
#    inline = [
#      "echo 'Hello'",
#    ]    
#    connection {
#      type        = "ssh"
#      user        = "ubuntu"
#      private_key = file("~/.ssh/po-lin-day20-lab-key-pair.pem")
#      host        = self.public_ip
#    }
#  }

  tags = {
    Name = "tiffany_frontend_1"
  }
}


resource "aws_instance" "tiffany_server_2" {
  ami           = "ami-0025245f3ca0bcc82"
  instance_type = "t3.micro"
  subnet_id     = aws_subnet.tiffany_public_subnet_2.id
  vpc_security_group_ids = [aws_security_group.tiffany_public_SG.id]
  key_name = "po-lin-day20-lab-key-pair"

#  provisioner "remote-exec" {
#    inline = [
#      "echo 'Hello'",
#    ]    
#    connection {
#      type        = "ssh"
#      user        = "ubuntu"
#      private_key = file("~/.ssh/po-lin-day20-lab-key-pair.pem")
#      host        = self.public_ip
#    }
#  }

  tags = {
    Name = "tiffany_frontend_2"
  }
}

# Back-End Instance
resource "aws_instance" "tiffany_server_3" {
  ami           = "ami-0025245f3ca0bcc82"
  instance_type = "t3.micro"
  subnet_id     = aws_subnet.tiffany_private_subnet_redis.id
  vpc_security_group_ids = [aws_security_group.tiffany_private_SG_redis.id]
  key_name = "po-lin-day20-lab-key-pair"

#  provisioner "remote-exec" {
#    inline = [
#      "echo 'Hello'",
#    ]
#    connection {
#      type        = "ssh"
#      user        = "ubuntu"
#      private_key = file("~/.ssh/po-lin-day20-lab-key-pair.pem")
#      host        = self.public_ip
#    }
#  }

  tags = {
    Name = "tiffany_backend"
  }
}

resource "aws_instance" "tiffany_server_4" {
  ami           = "ami-0025245f3ca0bcc82"
  instance_type = "t3.micro"
  subnet_id     = aws_subnet.tiffany_private_subnet_postgresql.id
  vpc_security_group_ids = [aws_security_group.tiffany_private_SG_postgresql.id]  
  key_name = "po-lin-day20-lab-key-pair"
  tags = {
    Name = "tiffany_database"
  }
}



# variable "server_names" {
#   type    = set(string)
#   default = ["tiffany_frontend", "tiffany_backend", "tiffany_database"]
# }
 
# resource "aws_instance" "servers" {
#   for_each      = var.server_names
#   ami           = "ami-0025245f3ca0bcc82"
#   instance_type = "t3.micro"
#   subnet_id              = 
#   tags = {
#     Name = each.key
#   }
# }

resource "aws_vpc" "tiffany_vpc" {
 cidr_block           = "20.0.0.0/16"
 enable_dns_support   = true
 enable_dns_hostnames = true

 tags = {
   Name = "tiffany-VPC"
 }
}

resource "aws_subnet" "tiffany_public_subnet_1" {
  vpc_id                  = aws_vpc.tiffany_vpc.id
  cidr_block              = "20.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "eu-west-1a"
 
  tags = {
    Name = "tiffany-PublicSubnet-1"
  }
}

resource "aws_subnet" "tiffany_public_subnet_2" {
  vpc_id                  = aws_vpc.tiffany_vpc.id
  cidr_block              = "20.0.4.0/24"
  map_public_ip_on_launch = true
  availability_zone       = "eu-west-1b"
 
  tags = {
    Name = "tiffany-PublicSubnet-2"
  }
}

resource "aws_subnet" "tiffany_private_subnet_redis" {
  # vpc_id                  = aws_vpc.tiffany_vpc.id
  vpc_id                  = aws_vpc.tiffany_vpc.id
  cidr_block              = "20.0.2.0/24"
  # map_public_ip_on_launch = true
  availability_zone       = "eu-west-1b"
 
  tags = {
    Name = "PrivateSubnetRedis"
  }
}

resource "aws_subnet" "tiffany_private_subnet_postgresql" {
  vpc_id                  = aws_vpc.tiffany_vpc.id
  cidr_block              = "20.0.3.0/24"
  # map_public_ip_on_launch = true
  availability_zone       = "eu-west-1a"
 
  tags = {
    Name = "tiffany-PrivateSubnetPostgreSQL"
  }
}

resource "aws_internet_gateway" "tiffany_igw" {
  vpc_id = aws_vpc.tiffany_vpc.id
 
  tags = {
    Name = "tiffany-InternetGateway"
  }
}

resource "aws_route_table" "tiffany_public_rt" {
  vpc_id = aws_vpc.tiffany_vpc.id
 
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.tiffany_igw.id
  }
 
  tags = {
    Name = "tiffany-PublicRouteTable"
  }
}

resource "aws_route_table" "tiffany_private_rt_redis" {
  vpc_id = aws_vpc.tiffany_vpc.id
 
  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.tiffany_nat_gateway.id
  }
 
  tags = {
    Name = "tiffany-PrivateRouteTable_Redis"
  }
}

resource "aws_route_table" "tiffany_private_rt_postgresql" {
  vpc_id = aws_vpc.tiffany_vpc.id
 
  route {
    cidr_block = "0.0.0.0/0"
    nat_gateway_id = aws_nat_gateway.tiffany_nat_gateway.id
  }
 
  tags = {
    Name = "tiffany-PrivateRouteTable_PostgreSQL"
  }
}

resource "aws_route_table_association" "tiffany_public_rt_assoc_1" {
  subnet_id      = aws_subnet.tiffany_public_subnet_1.id
  route_table_id = aws_route_table.tiffany_public_rt.id
}

resource "aws_route_table_association" "tiffany_public_rt_assoc_2" {
  subnet_id      = aws_subnet.tiffany_public_subnet_2.id
  route_table_id = aws_route_table.tiffany_public_rt.id
}

resource "aws_route_table_association" "tiffany_private_rt_assoc_redis" {
  subnet_id      = aws_subnet.tiffany_private_subnet_redis.id
  route_table_id = aws_route_table.tiffany_private_rt_redis.id
}

resource "aws_route_table_association" "tiffany_private_rt_assoc_postgresql" {
  subnet_id      = aws_subnet.tiffany_private_subnet_postgresql.id
  route_table_id = aws_route_table.tiffany_private_rt_postgresql.id
}
